2004-02-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c src/plot3d.c src/pm3d.c:
	Trivial changes to prevent stupid compiler warnings.

2004-02-13  Ethan Merritt  <merritt@u.washington.edu>

	* demo/prob.dem demo/prob2.dem: pause(-1) after final plot

	* term/svg.trm term/post.trm: Rearrange things slightly so that
	the output code is less ugly (cleanup of my 1 Feb 2004 patch).

2004-02-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.nt (makefile.nt, config.h): Copy makefile.nt and
	config.nt over into the src directory, if necessary.

	* src/time.c [!USE_SYSTEM_TIME] (gstrptime): Replace
	implementation of %s format.  Now reads in a double-precision
	number and uses gnuplot's own ggmtime() routine instead of library
	function gmtime().  This should fix SF bug #885279 "Reading '%s'
	timefmt is not 64 bit safe".
	(CHECK_SPACE, COPY_STRING, FORMAT_STRING): Macros moved inside
	function xstrftime() they belong to.  Changed to use do {...} 
	while(0) pattern.  #undef them after use.
 	(xstrftime): Changed return type to size_t to avoid warnings.
	(LETTER, NOTHING): Macros moved into function gstrptime() they
	belong to. #undef them after use.

2004-02-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.os2: Add SELECT_TYPE_ARG* definitions.

2004-02-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/specfun.c demo/random.dem docs/gnuplot.doc:
	Modify behaviour of rand() function in response to bug report #870706
	    rand(0) returns a pseudorandom number generated from current seeds
	    rand(-1) resets both seeds to a standard value
	    rand(x) for x>0 sets both 32-bit seeds to x
	    rand({x,y}) for x>0 sets seed1 to x and seed2 to y

2004-02-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gclient.c: Let the color sequence of the first 5 line
	types be the same as in postscript.

	* src/term.c (do_point): Let sequence of the 6 defined point types
	be the same as in postscript, png and x11.
