@@ -1,3 +1,10 @@
+2004-02-18  Petr Mikulik  <mikulik@physics.muni.cz>
+
+        * src/plot3d.c: Issue a warning when trying to draw surface with pm3d
+        style and there has not been previous "set pm3d".
+        Maybe we could refrain from this requirement in future by adding
+        new field 'pm3d.on' to 'pm3d.where' in 'struct pm3d'.
+
 2004-02-15  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/gplt_x11.c src/plot3d.c src/pm3d.c:
